--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title> Poznaj moc zapachów! </title>
 </head>
 <body>
-<div class="background">
 <header class="container">
     <div class="row">
         <div class="mobileMenu col-m-1 fa fa-bars">
@@ -22,16 +21,19 @@
                     <a href="#about"> O nas </a>
                 </li>
                 <li>
+                    <a href="#health"> Zdrowotne właściwości </a>
+                </li>
+                <li>
                     <a href="#products"> Oferta </a>
                 </li>
                 <li>
-                    <a href="#offer"> Promocje </a>
+                    <a href="#perfume"> Naturalne afrodyzjaki </a>
                 </li>
                 <li>
                     <a href="#contact"> Kontakt </a>
                 </li>
                 <li>
-                <a href="#local"> Znajdź nas </a>
+                    <a href="#local"> Znajdź nas </a>
                 </li>
             </ul>
         </nav>
@@ -47,14 +49,48 @@
     <section id="health" class="container">
         <div class="row">
             <div class="col-m-6 col-d-6">
-                <div class="slide">
+                <div class="part">
                     <img src="images/health.jpg"/>
                     <h2>Lecznicze działanie olejków eterycznych</h2>
-                    <p></p>
+                    <p>
+                        Historia od czasów najdawniejszych wskazuje, że ludzie używali olejków eterycznych do wielu różnych celów, wśród których działania terapeutyczne były najważniejsze.
+                    </p>
+                    <p>
+                        Aromaterapia to metoda medycyny naturalnej polegająca na terapii wielu dolegliwości olejkami eterycznymi z roślin stosowanymi poprzez inhalacje (kominki aromaterapeutyczne, inhalatory, nawilżacze powietrza, pot pourri® oraz przez skórę (masaże, kąpiele, okłady, kosmetyki).
+                    </p>
                 </div>
-
             </div>
         </div>
+    </section>
+    <section id="products" class="container">
+        <div class="row">
+            <div class="col-m-6 col-d-6">
+                <div class="part">
+                    <img src="images/produkty.jpg"/>
+                    <h2>Oferta naszych produktów</h2>
+                    <ul>
+                        <li>olejki eteryczne</li>
+                        <li>kominki do aromaterapii</li>
+                        <li>zestawy do produkcji własnych perfum</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="perfume" class="container">
+        <div class="row">
+            <div class="col-m-6 col-d-6">
+                <div class="part">
+                    <img src="images/afrodyz.jpg"/>
+                    <h2>Niesamowite naturalne afrodyzjaki!</h2>
+                    <h3>Przekonaj się sam!</h3>
+                    <a href="#">Czytaj więcej</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+
     </section>
 </main>
 </div>
