--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&amp;subset=latin-ext" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title> Poznaj moc zapachów! </title>
 </head>
 <body>
-<header class="container">
+<header class="home container">
     <div class="row">
-        <div class="mobileMenu col-m-1 fa fa-bars">
-        </div>
+        <div class="mobileMenu col-m-1 fa fa-bars"></div>
     </div>
     <div class="row">
         <nav class="col-m-6 col-d-6">
             <ul>
                 <li>
-                    <a href="#about"> O nas </a>
+                    <a href="#slider"> News </a>
                 </li>
                 <li>
-                    <a href="#health"> Zdrowotne właściwości </a>
+                    <a href="#health"> Zdrowie</a>
                 </li>
                 <li>
                     <a href="#products"> Oferta </a>
                 </li>
                 <li>
-                    <a href="#perfume"> Naturalne afrodyzjaki </a>
+                    <a href="#perfume"> Afrodyzjaki </a>
                 </li>
                 <li>
                     <a href="#contact"> Kontakt </a>
@@ -38,14 +38,38 @@
             </ul>
         </nav>
     </div>
+    <div id="about" class="container row">
+        <h1>Witamy w zielonym zaułku!</h1>
+        <h2>Z nami odkryjesz magię aromaterapii...</h2>
+    </div>
 </header>
-<section id="about" class="container">
-    <h1>Witamy w zielonym zaułku!<br/>Z nami odkryjesz magię aromaterapii...</h1>
-    <p>
-        Aromaterapia to gałąź medycyny naturalnej wykorzystująca olejki eteryczne i inne substancje zapachowe do korzystnego wpływania na nastrój, procesy poznawcze oraz zdrowie.
-    </p>
-</section>
 <main>
+    <section id="slider" class="container">
+        <div class="row">
+            <div class="col-m-6 col-d-6">
+                <div class="slide">
+                    <img src="images/newsletter.jpg"/>
+                    <span>Nasz newsletter!<br/><a href="#">Zapisz się!</a></span>
+                </div>
+                <div class="slide">
+                    <img src="images/medicine.jpg"/>
+                    <span>Z domowej apteczki</span>
+                </div>
+                <div class="slide">
+                    <img src="images/gift.jpg"/>
+                    <span> Oryginalne upominki!</span>
+                </div>
+                <div class="slide">
+                    <img src="images/homeMade.jpg"/>
+                    <span>DIY: perfumy homemade!</span>
+                </div>
+                <div class="slide">
+                    <img src="images/kominek.jpg"/>
+                    <span>Zapachy w twoim domu!</span>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="health" class="container">
         <div class="row">
             <div class="col-m-6 col-d-6">
@@ -66,12 +90,13 @@
         <div class="row">
             <div class="col-m-6 col-d-6">
                 <div class="part">
-                    <img src="images/produkty.jpg"/>
+                    <img src="images/kominek1.jpg"/>
                     <h2>Oferta naszych produktów</h2>
                     <ul>
                         <li>olejki eteryczne</li>
-                        <li>kominki do aromaterapii</li>
+                        <li>kominki i dyfuzory</li>
                         <li>zestawy do produkcji własnych perfum</li>
+                        <li>upominki</li>
                     </ul>
                 </div>
             </div>
@@ -84,15 +109,41 @@
                     <img src="images/afrodyz.jpg"/>
                     <h2>Niesamowite naturalne afrodyzjaki!</h2>
                     <h3>Przekonaj się sam!</h3>
-                    <a href="#">Czytaj więcej</a>
+                    <a href="#">Dowiedz się więcej...</a>
                 </div>
             </div>
         </div>
     </section>
-    <section>
-
-    </section>
 </main>
+    <section id="local" class="container">
+        <div class="row">
+            <div class="col-m-6 col-d-6">
+                <div class="part">
+                    <h2>Jak do nas trafić</h2>
+                    <span>g</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="container">
+        <article class="row">
+            <div class="col-m-6 col-d-3">
+                <h1> Skontaktuj się z nami </h1>
+                <form>
+                    <label for="user">Imię i nazwisko: </label>
+                    <input type="text" name="user" placeholder="Imię i nazwisko"/>
+                    <label for="mail">E-mail: </label>
+                    <input type="email" name="mail" placeholder="Adres e-mail"/>
+                    <label>Twoja wiadomość: </label>
+                    <textarea placeholder="Twoja wiadomość"></textarea>
+                    <input type="submit" value="Wyślij wiadomość"/>
+                </form>
+            </div>
+            <div class="col-m-6 col-d-3">
+                <iframe src="https://www.google.pl/maps/place/1+Maja+5,+Katowice/@50.2580864,19.034396,17z/data=!3m1!4b1!4m5!3m4!1s0x4716cfcadba9378d:0x6e47d258c00cdbd2!8m2!3d50.258083!4d19.03659" width="50%" height="450px" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </article>
+    </section>
 </div>
 
 <script src="js/out.js"></script>
