styled sections, add footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&amp;subset=latin-ext" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title> Poznaj moc zapachów! </title>
+    <title> Aromaterapia </title>
 </head>
 <body>
 <header class="home container">
@@ -47,6 +47,20 @@
     </div>
 </header>
 <main>
+    <article id="health" class="container">
+        <div class="row">
+            <div class="col-m-6 col-d-3">
+                <img src="images/health.jpg"/>
+            </div>
+            <div class="col-m-6 col-d-3">
+                <h2>Lecznicze działanie olejków eterycznych</h2>
+                <p>
+                    Historia od czasów najdawniejszych wskazuje, że ludzie używali olejków eterycznych do wielu różnych celów, wśród których działania terapeutyczne były najważniejsze.
+                </p>
+                <a href="#">Czytaj dalej...</a>
+            </div>
+        </div>
+    </article>
     <section id="slider" class="container">
         <div class="row">
             <div class="col-m-6 col-d-6">
@@ -73,65 +87,39 @@
             </div>
         </div>
     </section>
-    <section id="health" class="container">
+    <article id="products" class="container">
         <div class="row">
-            <div class="col-m-6 col-d-6">
-                <div class="part">
-                    <img src="images/health.jpg"/>
-                    <h2>Lecznicze działanie olejków eterycznych</h2>
-                    <p>
-                        Historia od czasów najdawniejszych wskazuje, że ludzie używali olejków eterycznych do wielu różnych celów, wśród których działania terapeutyczne były najważniejsze.
-                    </p>
-                    <p>
-                        Aromaterapia to metoda medycyny naturalnej polegająca na terapii wielu dolegliwości olejkami eterycznymi z roślin stosowanymi poprzez inhalacje (kominki aromaterapeutyczne, inhalatory, nawilżacze powietrza, pot pourri® oraz przez skórę (masaże, kąpiele, okłady, kosmetyki).
-                    </p>
-                </div>
+            <div class="col-m-6 col-d-3">
+                <img src="images/products.jpg"/>
+            </div>
+            <div class="col-m-6 col-d-3">
+                <h2>Oferta naszych produktów: </h2>
+                <ul>
+                    <li>olejki eteryczne</li>
+                    <li>kominki i dyfuzory</li>
+                    <li>zestawy do produkcji własnych perfum</li>
+                    <li>upominki</li>
+                </ul>
             </div>
         </div>
-    </section>
-    <section id="products" class="container">
+    </article>
+    <article id="perfume" class="container">
         <div class="row">
-            <div class="col-m-6 col-d-6">
-                <div class="part">
-                    <!--<img src="images/kominek1.jpg"/>-->
-                    <h2>Oferta naszych produktów</h2>
-                    <ul>
-                        <li>olejki eteryczne</li>
-                        <li>kominki i dyfuzory</li>
-                        <li>zestawy do produkcji własnych perfum</li>
-                        <li>upominki</li>
-                    </ul>
-                </div>
+            <div class="col-m-6 col-d-3">
+                <h2>Wyjątkowe, naturalne afrodyzjaki!</h2>
+                <h3>Przekonaj się sam!</h3>
+                <a href="#">Dowiedz się więcej...</a>
+            </div>
+            <div class="col-m-6 col-d-3">
+                <img src="images/afrodyzjaki.jpg"/>
             </div>
         </div>
-    </section>
-    <section id="perfume" class="container">
-        <div class="row">
-            <div class="col-m-6 col-d-6">
-                <div class="part">
-                    <img src="images/afrodyz.jpg"/>
-                    <h2>Niesamowite naturalne afrodyzjaki!</h2>
-                    <h3>Przekonaj się sam!</h3>
-                    <a href="#">Dowiedz się więcej...</a>
-                </div>
-            </div>
-        </div>
-    </section>
+    </article>
 </main>
-    <section id="local" class="container">
+    <section id="contact" class="container">
         <div class="row">
             <div class="col-m-6 col-d-3">
-                <div class="part">
-                    <h2>Jak do nas trafić</h2>
-                    <span>g</span>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="contact" class="container">
-        <article class="row">
-            <div class="col-m-6 col-d-3">
-                <h1> Skontaktuj się z nami </h1>
+                <h2> Zostaw wiadomość! </h2>
                 <form>
                     <label for="user">Imię i nazwisko: </label>
                     <input type="text" name="user" placeholder="Imię i nazwisko"/>
@@ -143,11 +131,37 @@
                 </form>
             </div>
             <div class="col-m-6 col-d-3">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2551.025222559611!2d19.01469065081063!3d50.254113209273406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716ce48aa6b1c7b%3A0x22b7eb916cbcbc7b!2sMydlarnia+u+Franciszka!5e0!3m2!1spl!2spl!4v1508317180885" width="600" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="social">
+                    <h2>Znajdź nas w Internecie!</h2>
+                    <a href="https://www.facebook.com/" class="fa fa-facebook-square" aria-hidden="true" target="blank"></a>
+                    <a href="https://twitter.com/" class="fa fa-twitter" aria-hidden="true" target="blank"></a>
+                    <a href="https://www.youtube.com/" class="fa fa-youtube-square" aria-hidden="true" target="blank"></a>
+                </div>
             </div>
-        </article>
+        </div>
     </section>
-</div>
+    <section id="local" class="container">
+        <div class="row">
+            <div class="col-m-6 col-d-3">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2551.025222559611!2d19.01469065081063!3d50.254113209273406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716ce48aa6b1c7b%3A0x22b7eb916cbcbc7b!2sMydlarnia+u+Franciszka!5e0!3m2!1spl!2spl!4v1508317180885" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="col-m-6 col-d-3">
+                <h2>Zapraszamy do naszego sklepu!</h2>
+                <h3><b>Zielony zaułek</b></h3>
+                <h3><b>Adres: </b>Kościuszki 25, 40-959 Katowice</h3>
+                <h3><b>Telefon: </b> 00-000-000-00</h3><br/>
+                <h3><b>Godziny otwarcia:</b></h3>
+                <h3>W tygodniu: od 10 do 18</h3>
+                <h3>W soboty: od 10 do 14</h3>
+            </div>
+        </div>
+    </section>
+    <!--FOOTER-->
+    <footer class="container">
+        <div class="row col-m-6 col-d-6">
+            <span>@Copyright 2017 | All Rights Reserved</span> <span> Angelika Płonka </span>
+        </div>
+    </footer>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="js/out.js"></script>
 </body>
