--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title> Aromaterapia </title>
 </head>
 <body>
+<!--Menu-->
 <header class="home container">
     <div class="row">
         <div class="col-m-1 hamburger">
@@ -162,6 +163,11 @@
             <span>@Copyright 2017 | All Rights Reserved</span> <span> Angelika Płonka </span>
         </div>
     </footer>
+<!--Opening animation-->
+<section id="opening">
+    <div id="flower"></div>
+    <span>Czujesz już to?</span>
+</section>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="js/out.js"></script>
 </body>
