--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <header class="home container">
     <div class="row">
         <div class="col-m-1 hamburger">
-            <i class="fa fa-bars" aria-hidden="false"></i>
+            <i class="fa fa-bars fa-2x" aria-hidden="false"></i>
         </div>
     </div>
     <div class="row">
         <nav class="desktopMenu col-m-6 col-d-6">
             <ul>
                 <li>
-                    <a href="#slider"> News </a>
+                    <a href="#health"> Zdrowie </a>
                 </li>
                 <li>
-                    <a href="#health"> Zdrowie</a>
+                    <a href="#slider"> News </a>
                 </li>
                 <li>
                     <a href="#products"> Oferta </a>
@@ -99,7 +99,6 @@
                     <li>olejki eteryczne</li>
                     <li>kominki i dyfuzory</li>
                     <li>zestawy do produkcji własnych perfum</li>
-                    <li>upominki</li>
                 </ul>
             </div>
         </div>
@@ -133,10 +132,10 @@
             </div>
             <div class="col-m-6 col-d-3">
                 <div class="social">
-                    <h2>Znajdź nas w Internecie!</h2>
-                    <a href="https://www.facebook.com/" class="fa fa-facebook-square" aria-hidden="true" target="blank"></a>
-                    <a href="https://twitter.com/" class="fa fa-twitter" aria-hidden="true" target="blank"></a>
-                    <a href="https://www.youtube.com/" class="fa fa-youtube-square" aria-hidden="true" target="blank"></a>
+                    <h3>Znajdziesz nas:</h3>
+                    <a href="https://www.facebook.com/" class="fa fa-facebook-square fa-5x" aria-hidden="true" target="blank"></a>
+                    <a href="https://twitter.com/" class="fa fa-twitter fa-5x" aria-hidden="true" target="blank"></a>
+                    <a href="https://www.youtube.com/" class="fa fa-youtube-square fa-5x" aria-hidden="true" target="blank"></a>
                 </div>
             </div>
         </div>
@@ -148,25 +147,27 @@
             </div>
             <div class="col-m-6 col-d-3">
                 <h2>Zapraszamy do naszego sklepu!</h2>
-                <h3><b>Zielony zaułek</b></h3>
-                <h3><b>Adres: </b>Kościuszki 25, 40-959 Katowice</h3>
-                <h3><b>Telefon: </b> 00-000-000-00</h3><br/>
-                <h3><b>Godziny otwarcia:</b></h3>
-                <h3>W tygodniu: od 10 do 18</h3>
-                <h3>W soboty: od 10 do 14</h3>
+                <h3>Zielony zaułek</h3>
+                <h4>Adres: ul. Kościuszki 25,<br/> 40-959 Katowice</h4>
+                <h4>Telefon: 00-000-000-00</h4><br/>
+                <h4>Godziny otwarcia:</h4>
+                <h4>W tygodniu: od 10 do 18</h4>
+                <h4>W soboty: od 10 do 14</h4>
             </div>
         </div>
     </section>
     <!--FOOTER-->
     <footer class="container">
         <div class="row col-m-6 col-d-6">
-            <span>@Copyright 2017 | All Rights Reserved</span> <span> Angelika Płonka </span>
+            <span>2017</span>
+            <span><a href="https://github.com/Angelika-Plonka" class="fa fa-github fa-2x" aria-hidden="true" target="blank"></a></span>
+            <span> Angelika Płonka </span>
         </div>
     </footer>
 <!--Opening animation-->
 <section id="opening">
     <div id="flower"></div>
-    <span>Czujesz już to?</span>
+    <h3>Czujesz to już?</h3>
 </section>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="js/out.js"></script>
