added Scrolling button

--- a/index.html
+++ b/index.html
@@ -130,13 +130,11 @@
                     <input type="submit" value="Wyślij wiadomość"/>
                 </form>
             </div>
-            <div class="col-m-6 col-d-3">
-                <div class="social">
-                    <h3>Znajdziesz nas:</h3>
-                    <a href="https://www.facebook.com/" class="fa fa-facebook-square fa-5x" aria-hidden="true" target="blank"></a>
-                    <a href="https://twitter.com/" class="fa fa-twitter fa-5x" aria-hidden="true" target="blank"></a>
-                    <a href="https://www.youtube.com/" class="fa fa-youtube-square fa-5x" aria-hidden="true" target="blank"></a>
-                </div>
+            <div id="social" class="col-m-6 col-d-3">
+                <h3>Znajdziesz nas:</h3>
+                <a href="https://www.facebook.com/" class="fa fa-facebook-square fa-5x" aria-hidden="true" target="blank"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter fa-5x" aria-hidden="true" target="blank"></a>
+                <a href="https://www.youtube.com/" class="fa fa-youtube-square fa-5x" aria-hidden="true" target="blank"></a>
             </div>
         </div>
     </section>
@@ -169,6 +167,7 @@
     <div id="flower"></div>
     <h3>Czujesz to już?</h3>
 </section>
+<div class="upButton"><i class="fa fa-angle-double-up" aria-hidden="true"></i></div>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="js/out.js"></script>
 </body>
