added form validation

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="row">
             <div class="col-m-6 col-d-3">
                 <h2> Zostaw wiadomość! </h2>
-                <form>
+                <form method="post">
                     <label for="user">Imię i nazwisko: </label>
                     <input type="text" name="user" placeholder="Imię i nazwisko"/>
                     <label for="mail">E-mail: </label>
