--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </ul>
         </nav>
     </div>
+    <!--WELCOME-->
     <div id="about" class="container row">
         <h1>Witamy w zielonym zaułku!</h1>
         <h2>Z nami odkryjesz magię aromaterapii...</h2>
@@ -62,6 +63,7 @@
             </div>
         </div>
     </article>
+    <!--SLIDER-->
     <section id="slider" class="container">
         <div class="row">
             <div class="col-m-6 col-d-6">
@@ -88,6 +90,7 @@
             </div>
         </div>
     </section>
+    <!--PRODUCTS-->
     <article id="products" class="container">
         <div class="row">
             <div class="col-m-6 col-d-3">
@@ -103,6 +106,7 @@
             </div>
         </div>
     </article>
+    <!--PERFUME-->
     <article id="perfume" class="container">
         <div class="row">
             <div class="col-m-6 col-d-3">
@@ -116,6 +120,7 @@
         </div>
     </article>
 </main>
+    <!--CONTACT-->
     <section id="contact" class="container">
         <div class="row">
             <div class="col-m-6 col-d-3">
@@ -141,6 +146,7 @@
             </div>
         </div>
     </section>
+    <!--LOCAL-->
     <section id="local" class="container">
         <div class="row">
             <div class="col-m-6 col-d-3">
